# HSKL-Language

./: ReadMe.md
CLI/: a.out  main.c
Examples/: four.hskl  helloworld.hskl  index.hskl  nine.hskl  one.hskl  three.hskl
Install/: install.sh
OwnLibsForProject/Atom1c-HTML/: LICENSE  OnlyLib-Parser-HTML.cabal
OwnLibsForProject/Atom1c-HTML/src/: AtomHtml.hs
OwnLibsForProject/Atom1c-HTML/test/: Main.hs
Project/: CHANGELOG.md  Hskl-Base.cabal  cabal.project
Project/app/: Main.hs
Project/examples/: about.hskl  adt.hskl  index.hskl  router.hskl
Project/examples/moreExamples/: eight.hskl  five.hskl  nine.hskl  seven.hskl  six.hskl  ten.hskl  two.hskl
Project/examples/step/: index.hskl
Project/libs/Atom1c-HTML/: CHANGELOG.md  OnlyLib-Parser-HTML.cabal
Project/libs/Atom1c-HTML/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Project/libs/Atom1c-HTML/dist-newstyle/packagedb/ghc-9.14.1/: OnlyLib-Parser-HTML-0.1.0.0-inplace.conf  package.cache
Project/libs/Atom1c-HTML/src/AtomHtml/: Parser.hs  Render.hs  Types.hs
Project/src/Interpreter/: Builtins.hs  Eval.hs  Value.hs
Project/src/Lexer/: Lexer.hs  Tokens.hs
Project/src/Parser/: AST.hs  Parser.hs
Project/src/Server/: Runner.hs  Server.hs  ServerConfig.hs
Project/src/Transpiler/: JsGen.hs
