cabal-version:      3.0
name:               Hskl-Base
version:            0.1.0.0

-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Atom1c-B1rd
maintainer:         116822580+Atom1c-B1rd@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:




common warnings
    ghc-options: -Wall -threaded

    default-extensions:
        OverloadedStrings
        LambdaCase
        TupleSections
        ScopedTypeVariables
        RecordWildCards

executable Hskl-Base
    import:           warnings
    main-is:          Main.hs
    
    -- other-modules:
    other-modules:
        Interpreter.Builtins
        Interpreter.Eval
        Interpreter.Value
        Lexer.Tokens
        Parser.AST
        Parser.Parser
        Server.Runner
        Server.Server
        Server.ServerConfig
    build-depends:  base, text, megaparsec, parser-combinators, scotty, wai, wai-extra, warp, http-types, directory, filepath, containers, 
                unordered-containers, stm, async, aeson, aeson-pretty, exceptions, safe-exceptions, mtl, transformers,
                fast-logger, wai-logger, optparse-applicative, bytestring,
                Atom1c-HTML, template-haskell, haskell-src-meta
    hs-source-dirs:   app, src
    default-language: GHC2021
